# microservices

./: Cargo.toml  Settings.toml
src/: lib.rs  storage.rs
src/kafka/: config.rs  consumer.rs  mod.rs  producer.rs
src/tests/: mod.rs  simple.rs
src/tests/kv/: concurrent.rs  mod.rs  simple.rs
src/tests/utils/: builders.rs  mod.rs  test_env.rs  types.rs
