[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
config = "0.13.3"
env_logger = "0.10.0"
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.8.5"
rdkafka = "0.29.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
